DDI-Lifecycle/3.2/model/_sources/composite-types/GeographicLocationCodeRepresentationBaseType/index.rst.txt
GeographicLocationCodeRepresentationBaseType
--------------------------------------------

Allows for the use of all or part of a GeographicLocation description to be used as a response domain or value representation by a question or variable. In addition to the basic objects of a representation it describes the Geographic Location values available for use by the question or variable.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "IncludedGeographicLocationCodes",":doc:`/composite-types/IncludedGeographicLocationCodesType/index`","0..1","Identifies the Geographic Location codes included by the Authorized source of the code, the geographic location being used and the locations to exclude."
   "LimitedCodeSegmentCaptured",":doc:`/composite-types/LimitedCodeSegmentCapturedType/index`","0..1","When the code is a concatenation this structure allows you to limit the portion of the concatenated code that this object captures."

Properties Inherited from RepresentationType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "RecommendedDataType",":doc:`/composite-types/CodeValueType/index`","0..1","This field provides the recommended treatment of the data within an application. The value should come from a controlled vocabulary - recommended values include the set found in W3C XML Schema Part 2, but excluding string sub-types, QNAME, and NOTATION."
   "GenericOutputFormat",":doc:`/composite-types/CodeValueType/index`","0..1","This field provides a recommended generic treatment of the data for display by an application. The value should come from a controlled vocabulary."
   "MissingValue","string","0..1","List the values used to represent missing data in a space delimited array. Use of MissingValuesReference is preferred. If this content does not match the values provided in the MissingValuesReference, the content of the MissingValuesReference overrides the content of this attribute."
   "BlankIsMissingValue","boolean","0..1","When value is true a blank or empty variable content should be treated as a missing value.  Use of MissingValuesReference is preferred."
   "ClassificationLevel","string","0..1","Indicates the type of relationship, nominal, ordinal, interval, ratio, or continuous. Use where appropriate for the representation type."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/RepresentationType/index`
    * **GeographicLocationCodeRepresentationBaseType**
        * :doc:`/composite-types/GeographicLocationCodeDomainType/index`


Relationships
~~~~~~~~~~~~~


.. container:: image

   |stub|

.. |stub| image:: ../../images/GeographicLocationCodeRepresentationBaseType.svg

